--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,3 +72,6 @@ jobs:
           bucket: github-custom-action-js
           dist-folder: ./dist
           # bucket-region: us-east-2
+      - name: Output information
+        run: |
+          echo "Live URL: ${{ steps.deploy.outputs.website-url }}"
